# sp_rust

./: Cargo.toml  README.md  characteristic_template.yaml  combo_template.yaml  dialogue_template.yaml  effect_template.yaml  ideas.txt  item_template.yaml  obj_template.yaml  recipe_template.yaml  res_property_template.yaml  res_template.yaml  skill_template.yaml  start.yaml  tasks.txt  terrain_feature_template.yaml
map/: moisture.tsx  temperature.tsx  test3.tmx
src/: account.rs  ai.rs  combat.rs  constants.rs  effect.rs  encounter.rs  event.rs  experiment.rs  farm.rs  game.rs  ids.rs  item.rs  lib.rs  main.rs  map.rs  network.rs  obj.rs  player.rs  recipe.rs  resource.rs  skill.rs  structure.rs  templates.rs  terrain_feature.rs  villager.rs  world.rs
src/components/: mod.rs  npc.rs  villager.rs
src/plugins/ai/: mod.rs  npc.rs  tax_collector.rs  villager.rs
tests/: test.rs
tileset/: shadow.json  shadowbolt.json
