[package]
name = "siege_perilous"
version = "0.5.0"
authors = ["peter.holko@gmail.com"]
edition = "2021"

[[bin]]
name = "siege_perilous"
path = "src/main.rs"

[lib]
name = "siege_perilous"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.9", default-features = false }
crossbeam-channel = "0.5.1"
tokio-tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync", "process"] }
url = "2.0.0"
env_logger = "0.7"
async-compat = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "2.2.0"
tiled = "0.9.3"
glob = "0.3.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
big-brain = { version = "0.15.0", features = ["trace"] }
pathfinding = "4.1.1"
rand = "0.8.5"
argon2 = "0.5.1"
thiserror = "1.0"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tungstenite = "0.17.3"

